--- a/basic-html-css/style.css
+++ b/basic-html-css/style.css
@@ -1,1 +1,163 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+html, body{
+    line-height: 1.5em;
+    font-weight: 300;
+    font-family: "Roboto", sans-serif;
+}
 
+
+.hero-page{
+    background-image: url(developer\ \(2\).jpg);
+   min-height: 100vh; 
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+}
+
+.text-container{
+    align-items: center;
+    justify-content: center;
+    margin: 0 auto ;
+    color: white;
+    padding-top: 60px;
+    padding-left: 16px;
+    text-align: center;
+    line-height: normal;
+    max-width: 900px;
+    
+}
+
+.text-container h2{
+    /* font-size: 40px; */
+    text-align: left;
+}
+
+.text-container h1{
+    text-align: left;
+    /* font-size:30px ; */
+}
+
+
+.lg-text{
+    font-size: 70px;
+      font-family: "Roboto", sans-serif;
+      font-weight: 400;
+}
+
+.black-box{
+    background-color: gray;
+    padding: 20px;
+    text-align: center;
+   
+}
+.black-box h2{
+    color: white;
+    font-weight: 400;
+    font-size: 72px;
+}
+
+.black-box h2 span{
+    font-size: 90px ;
+}
+
+.work{
+    display: grid;
+    grid-template-columns: repeat(auto-fit , minmax(320px, 1fr));
+  
+
+}
+.card{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    max-width: 320px ;
+    height: 400px;
+    border-radius: 10%;
+    box-shadow: 3px 4px 5px rgba(1, 1, 1, 0.8);
+    overflow: hidden;
+    transition: 0.4s ease-in-out;
+    
+}
+
+
+
+.grid-item{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.image-container img {
+    width: 100%;
+    height: 60%;
+    overflow: hidden;
+    border-top-left-radius: 10%;
+    border-top-right-radius: 10%;
+    object-fit: cover;
+}
+
+.card-content p{
+    padding: 10px;
+    
+}
+
+.card-content h3{
+ margin-top: 10px;
+padding-left: 10px;
+    
+}
+.card:hover{
+    transform: scale(1.05);
+    transition: 0.4s ease-in-out;
+
+}
+
+.personal{
+    display: flex;
+
+}
+
+.contact{
+    background-color: olive;
+}
+
+
+.about-me{
+    background-color: saddlebrown;
+    text-align: center;
+
+}
+
+.contact , .about-me{
+    padding: 20px;
+    color: white;
+    min-height: 300px;
+}
+
+.contact p
+{
+    margin-bottom: 20px;
+    margin-top: 10px;
+
+}
+
+.about-me p {
+    margin-bottom: 20px;
+    margin-top: 10px;
+}
+
+.about-me h2{
+   font-size: 50px;
+  
+   font-weight: 100;
+
+}
+.contact h2{
+     font-size: 50px;
+     font-weight: 200;
+  
+   font-weight: 100;
+}
